# yaml-shellcheck

./: .pre-commit-hooks.yaml  pyproject.toml
